# eldentracker

./: .gitignore  .gitmodules  CMakeLists.txt
example/: index.html  package-lock.json  package.json  script.js  styles.css
src/: functionality.cpp  functionality.h  logger.cpp  logger.h  main.cpp  mem.cpp  mem.h  networking.cpp  networking.h  settings.cpp  settings.h
